manifests/cluster-addons/keel/templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: keel
  labels:
    pod-security.kubernetes.io/enforce: restricted
