manifests/cluster-addons/keel/templates/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: keel
  namespace: keel
spec:
  endpointSelector: {}

  ingress: []

  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: '6443'
              protocol: TCP

    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - rules:
            dns:
              - matchPattern: '*'
          ports:
            - port: '53'
              protocol: ANY

    - toFQDNs:
        - matchPattern: 'ghcr.io/v2/bakseter/*'
      toPorts:
        - ports:
            - port: '443'
              protocol: TCP
