manifests/cluster-addons/keel/templates/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: keel
  namespace: keel
spec:
  endpointSelector: {}

  ingress: []

  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - rules:
            http: []
          ports:
            - port: '6443'
              protocol: TCP

    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - rules:
            http: []
          ports:
            - port: '53'
              protocol: TCP
            - port: '53'
              protocol: UDP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: keel-egress-fqdn
  namespace: keel
spec:
  endpointSelector: {}

  egress:
    - toFQDNs:
        - matchName: 'ghcr.io/bakseter/*'
      toPorts:
        - rules:
            http: []
          ports:
            - port: '443'
              protocol: TCP
